@@ -9,17 +9,20 @@ import org.openqa.selenium.support.ui.ExpectedConditions;
 import org.testng.Assert;
 import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
+import school.redrover.model.ManagePage;
 import school.redrover.runner.BaseTest;
 
 import java.util.List;
-import java.util.stream.Collectors;
+
+
+import static org.openqa.selenium.devtools.v109.dom.DOM.getSearchResults;
 
 public class ManageTest extends BaseTest {
     private static final String NEW_USER_NAME = RandomStringUtils.randomAlphanumeric(10);
     private static final By SEARCH_SETTINGS = By.id("settings-search-bar");
 
     @Test
-    public void testSearchWithNumericSymbol() {
+    public void test1SearchWithNumericSymbol() {
         getDriver().findElement(By.xpath("//a[@href='/manage']")).click();
 
         WebElement numberWrite = getDriver().findElement(SEARCH_SETTINGS);
@@ -35,7 +38,17 @@ public class ManageTest extends BaseTest {
     }
 
     @Test
-    public void testSearchWithLetterConfigureSystem() {
+    public void testSearchWithNumericSymbol() {
+       ManagePage managePage = new ManagePage(getDriver());
+
+        managePage.navigateToManagePage();
+        managePage.enterSearchQuery("1");
+        managePage.clickSearchButton();
+        managePage.assertNoResultsDisplayed();
+    }
+
+    @Test
+    public void test1SearchWithLetterConfigureSystem() {
         getDriver().findElement(By.xpath("//a[@href='/manage']")).click();
 
         WebElement letterWrite = getDriver().findElement(SEARCH_SETTINGS);
@@ -57,7 +70,18 @@ public class ManageTest extends BaseTest {
     }
 
     @Test
-    public void testSearchWithLetterManageCredentials() {
+    public void testSearchWithLetterConfigureSystem() {
+        ManagePage managePage = new ManagePage(getDriver());
+
+        managePage.navigateToManagePage();
+        managePage.enterSearchQuery("m");
+        managePage.clickSearchButton();
+        managePage.selectOnTheFirstLineInDropdown();
+        managePage.assertConfigureSystemPage();
+    }
+
+    @Test
+    public void test1SearchWithLetterManageCredentials() {
         getDriver().findElement(By.xpath("//a[@href='/manage']")).click();
 
         WebElement partOfaWord = getDriver().findElement(SEARCH_SETTINGS);
@@ -77,7 +101,17 @@ public class ManageTest extends BaseTest {
     }
 
     @Test
-    public void testCreateNewUser() {
+    public void testSearchWithLetterManageCredentials() {
+        ManagePage managePage = new ManagePage(getDriver());
+
+        managePage.navigateToManagePage();
+        managePage.enterSearchQuery("man");
+        managePage.selectManageCredentialsOption();
+        managePage.assertCredentialsPage();
+    }
+
+    @Test
+    public void test1CreateNewUser() {
 
         getDriver().findElement(By.xpath("//a[@href='/manage']")).click();
         getDriver().findElement(By.xpath("//a[@href='securityRealm/']")).click();
@@ -101,8 +135,52 @@ public class ManageTest extends BaseTest {
         Assert.assertTrue(true, NEW_USER_NAME);
     }
 
+    @Test
+    public void testCreateNewUser() {
+        ManagePage managePage = new ManagePage(getDriver());
+
+        managePage.navigateToManagePage();
+        managePage.navigateToManageUsersPage();
+        managePage.clickCreateUser();
+        managePage.fillUserDetails();
+        managePage.submit();
+        managePage.assertUserCreated();
+    }
+
+    @Test
+    public void test1CreateNewUserWithInvalidEmail() {
+
+        getDriver().findElement(By.xpath("//a[@href='/manage']")).click();
+        getDriver().findElement(By.xpath("//a[@href='securityRealm/']")).click();
+        getDriver().findElement(By.xpath("//a[normalize-space()='Create User']")).click();
+
+        getDriver().findElement(By.id("username")).sendKeys(NEW_USER_NAME);
+        getDriver().findElement(By.name("password1")).sendKeys("1234");
+        getDriver().findElement(By.name("password2")).sendKeys("1234");
+        getDriver().findElement(By.name("fullname")).sendKeys("Nik Smith");
+        getDriver().findElement(By.name("email")).sendKeys("nik.com");
+
+        getDriver().findElement(By.name("Submit")).click();
+
+        Assert.assertEquals("Invalid e-mail address", getDriver()
+                .findElement(By.xpath("//div[@class='error jenkins-!-margin-bottom-2']")).getText());
+
+    }
+
+    @Test
+    public void testCreateNewUserWithInvalidEmail() {
+        ManagePage managePage = new ManagePage(getDriver());
+
+        managePage.navigateToManagePage();
+        managePage.navigateToManageUsersPage();
+        managePage.clickCreateUser();
+        managePage.fillUserDetailsWithInvalidEmail();
+        managePage.submit();
+        managePage.assertInvalidEmailError();
+    }
+
     @Test(dependsOnMethods = "testCreateNewUser")
-    public void testDeleteUser() {
+    public void test1DeleteUser() {
         getDriver().findElement(By.xpath("//a[@href='/manage']")).click();
         getDriver().findElement(By.xpath("//a[@href='securityRealm/']")).click();
 
@@ -119,8 +197,19 @@ public class ManageTest extends BaseTest {
         Assert.assertFalse(false, NEW_USER_NAME);
     }
 
+    @Test(dependsOnMethods = "testCreateNewUser")
+    public void testDeleteUser() {
+        ManagePage managePage = new ManagePage(getDriver());
+
+        managePage.navigateToManagePage();
+        managePage.navigateToManageUsersPage();
+        managePage.clickDeleteUser();
+        managePage.submit();
+        managePage.assertUserDeleted();
+    }
+
     @Test
-    public void testAddDescriptionToUserOnTheUserProfilePage() {
+    public void test1AddDescriptionToUserOnTheUserProfilePage() {
 
         getDriver().findElement(By.xpath("//a[@href='/manage']")).click();
         getDriver().findElement(By.xpath("//a[@href='securityRealm/']")).click();
@@ -135,7 +224,19 @@ public class ManageTest extends BaseTest {
     }
 
     @Test
-    public void testManageConfigureNumberOfExecutorsInMasterNode() {
+    public void testAddDescriptionToUserOnTheUserProfilePage() {
+        ManagePage managePage = new ManagePage(getDriver());
+
+        managePage.navigateToManagePage();
+        managePage.clickUserEditButton();
+        managePage.enterDescriptionText();
+        managePage.submit();
+        managePage.assertDescriptionText();
+    }
+
+
+    @Test
+    public void test1ManageConfigureNumberOfExecutorsInMasterNode() {
 
         getDriver().findElement(By.xpath("//a[@href='/manage']")).click();
         getDriver().findElement(By.xpath("//a[@href='computer']")).click();
@@ -152,83 +253,63 @@ public class ManageTest extends BaseTest {
         Assert.assertEquals("3", getDriver().findElement(By.name("_.numExecutors")).getAttribute("value"));
     }
 
-    @DataProvider(name = "wordsToSearch")
-    public Object[][] searchWords() {
-        return new Object[][]{{"manage"}, {"tool"}, {"sys"}, {"sec"}, {"cred"}, {"dow"}, {"script"}, {"jenkins"}, {"stat"}};
-    }
+    @Test
+    public void testManageConfigureNumberOfExecutorsInMasterNode() {
+        ManagePage managePage = new ManagePage(getDriver());
 
-    @Test(dataProvider = "wordsToSearch")
-    public void testSearchSettingsItemsByKeyword(String keyword) {
-        List<WebElement> actualResult, expectedResult, listSettingsItems;
-
-        getDriver().findElement(By.xpath("//div[@id='tasks']//div//a[@href='/manage']")).click();
-
-        listSettingsItems = getDriver().findElements(By.xpath("//div[@class='jenkins-section__item']//dt"));
-
-        WebElement searchSettingsField = getDriver().findElement(By.xpath("//input[@id='settings-search-bar']"));
-        searchSettingsField.click();
-        searchSettingsField.sendKeys(keyword);
-        getWait10().until(ExpectedConditions.textToBePresentInElementValue(searchSettingsField, keyword));
-
-        actualResult = getWait10().until(ExpectedConditions.presenceOfAllElementsLocatedBy(By.xpath("//div[@class='jenkins-search__results']//a")));
-        expectedResult = listSettingsItems.stream().filter(item -> item.getText().toLowerCase().contains(keyword)).toList();
-
-        for (int i = 0; i < expectedResult.size(); i++) {
-            Assert.assertEquals(actualResult.get(i).getText(), expectedResult.get(i).getText());
-        }
+        managePage.navigateToManagePage();
+        managePage.navigateManageNodesAndClouds();
+        managePage.clickConfigureMasterNode();
+        managePage.changeNumberOfExecutorsAndSave("3");
+        managePage.navigateToMasterNodeConfiguration();
+        managePage.assertNumberOfExecutors("3");
     }
 
     @DataProvider(name = "KeyWordsToSearch")
     public Object[][] searchWordsKey() {
-        return new Object[][]{{"manage"}, {"tool"}, {"sys"}, {"sec"}, {"cred"}, {"dow"}, {"script"}, {"jenkins"}, {"stat"}};
+        return new Object[][]{{"manage"}, {"tool"}, {"system"}, {"sec"}, {"cre"}, {"do"}, {"scr"}, {"jen"}, {"stat"}};
     }
 
     @Test(dataProvider = "KeyWordsToSearch")
-    public void testSearchSettingsByWord(String keyword) {
+    public void test1SearchSettingsByWord(String keyword) {
 
-        WebElement manageLink = getDriver().findElement(By.xpath("//div[@id='tasks']//div//a[@href='/manage']"));
-        manageLink.click();
+        getDriver().findElement(By.xpath("//a[@href='/manage']")).click();
 
-        List<WebElement> listSettingsItems = getDriver().findElements(By.xpath("//div[@class='jenkins-section__item']//dt"));
+        List<WebElement> listElements = getDriver().findElements(By.xpath("//div[@class='jenkins-section__item']//dt"));
 
-        WebElement searchSettingsField = getDriver().findElement(By.xpath("//input[@id='settings-search-bar']"));
-        searchSettingsField.click();
-        searchSettingsField.sendKeys(keyword);
-        getWait10().until(ExpectedConditions.textToBePresentInElementValue(searchSettingsField, keyword));
+        WebElement searchLink = getDriver().findElement(By.xpath("//input[@id='settings-search-bar']"));
+        searchLink.click();
+        searchLink.sendKeys(keyword);
 
-        List<WebElement> actualSearchResults = getWait10().until(ExpectedConditions.presenceOfAllElementsLocatedBy(By.xpath("//div[@class='jenkins-search__results']//a")));
+        getWait5().until(ExpectedConditions.textToBePresentInElementValue(searchLink, keyword));
 
-        List<WebElement> expectedSearchResults = listSettingsItems.stream()
+        List<WebElement> actualResults = getWait5().until(ExpectedConditions.presenceOfAllElementsLocatedBy
+                (By.xpath("//div[@class='jenkins-search__results']//a")));
+
+        List<WebElement> expectedSearchResults = listElements.stream()
                 .filter(item -> item.getText().toLowerCase().contains(keyword))
-                .collect(Collectors.toList());
-
-        Assert.assertEquals(actualSearchResults.size(), expectedSearchResults.size());
+                .toList();
 
         for (int i = 0; i < expectedSearchResults.size(); i++) {
-            Assert.assertEquals(actualSearchResults.get(i).getText(), expectedSearchResults.get(i).getText());
+            Assert.assertEquals(actualResults.get(i).getText(), expectedSearchResults.get(i).getText());
         }
     }
+
+
+
 
     @Test
     public void testBreadcrumbNavigateManageJenkins() {
         new Actions(getDriver()).moveToElement(getDriver().findElement(
-                By.xpath("//*[@id='breadcrumbs']/li/a[@href='/']"))).perform();
+                By.xpath("//div[@id='breadcrumbBar']//li[1]"))).perform();
 
-        By dropdown = By.xpath("//*[@id='breadcrumbs']/li/a/button[@class='jenkins-menu-dropdown-chevron']");
-        getWait5().until(ExpectedConditions.elementToBeClickable(dropdown));
+        WebElement arrow = getDriver().findElement(By.xpath("//*[@id='breadcrumbs']/li/a/button[@class='jenkins-menu-dropdown-chevron']"));
+        new Actions(getDriver()).moveToElement(arrow).perform();
+        arrow.sendKeys(Keys.RETURN);
 
-        WebElement pointer = getDriver().findElement(dropdown);
-        new Actions(getDriver()).moveToElement(pointer).perform();
-        pointer.sendKeys(Keys.RETURN);
+        getDriver().findElement(By.xpath("//*[@id='yui-gen4']/a/span")).click();
 
-        By sectionNameLocator = By.xpath("//*[@id='yui-gen4']/a/span");
-        getWait5().until(ExpectedConditions.visibilityOfElementLocated(sectionNameLocator));
-        getDriver().findElement(sectionNameLocator).click();
-
-        WebElement manageJenkinsHeader = getDriver().findElement(By.tagName("h1"));
-        getWait2().until(ExpectedConditions.visibilityOf(manageJenkinsHeader));
-
-        Assert.assertEquals(manageJenkinsHeader.getText(), "Manage Jenkins");
+        Assert.assertEquals(getDriver().findElement(By.tagName("h1")).getText(), "Manage Jenkins");
     }
 
 }
